@@ -44,6 +44,54 @@ deploy {
                 // getTargetTypeClass is a shortcut to get the class type using a string
 
                 frcJava(getArtifactTypeClass('FRCJavaArtifact')) {
+                    // "Other" means no gc args at all
+                    //gcType = edu.wpi.first.gradlerio.deploy.roborio.GarbageCollectorType.Other
+
+                    // serial gc is shorter pauses, less throughput
+                    // we don't make much garbage so it might be better?
+                    // jvmArgs.add("-XX:+UseSerialGC")
+                    // these are the default gc args
+                    // jvmArgs.add("-XX:+UseG1GC")
+                    // jvmArgs.add("-XX:MaxGCPauseMillis")
+                    // jvmArgs.add("-XX:GCTimeRatio")
+
+                    // turn off JIT
+                    // jvmArgs.add("-Djava.compiler=NONE")
+
+                    // compile everything at the start
+                    //jvmArgs.add("-Xcomp")
+                    //jvmArgs.add("-Xbatch")
+
+                    // "pretouch" means actually committing heap
+                    // jvmArgs.remove("-XX:+AlwaysPreTouch")
+
+                    // manual heap space size
+                    // jvmArgs.add("-XX:InitialRAMPercentage=30")
+                    // jvmArgs.add("-XX:MinRAMPercentage=30")
+                    // jvmArgs.add("-XX:MaxRAMPercentage=10")
+
+                    // print heap space stats at startup
+                    jvmArgs.add("-XshowSettings:vm")
+
+                    // this makes a garbage collection log
+                    // jvmArgs.add("-Xlog:gc*=info,heap*=info:file=/tmp/jvm.log")
+                   
+                    // these make it possible to connect JConsole
+                    jvmArgs.add("-Dcom.sun.management.jmxremote=true")
+                    jvmArgs.add("-Dcom.sun.management.jmxremote.port=1099")
+                    jvmArgs.add("-Dcom.sun.management.jmxremote.local.only=false")
+                    jvmArgs.add("-Dcom.sun.management.jmxremote.ssl=false")
+                    jvmArgs.add("-Dcom.sun.management.jmxremote.authenticate=false")
+                    jvmArgs.add("-Djava.rmi.server.hostname=172.22.11.2")
+
+                    // these are for native memory tracking
+                    // jvmArgs.add("-XX:NativeMemoryTracking=detail")
+                    // jvmArgs.add("-XX:+UnlockDiagnosticVMOptions")
+                    // jvmArgs.add("-XX:+PrintNMTStatistics")
+
+                    // this is so we can see what's taking heap space
+                    //jvmArgs.add("-XX:+HeapDumpOnOutOfMemoryError")
+                    //jvmArgs.add("-XX:HeapDumpPath=/tmp/heap.hprof")
                 }
 
                 // Static files artifact
